Agrega boton faltante

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -63,6 +63,7 @@
             <div class="service">
                 <h3>🛍️ Products Service</h3>
                 <p>Catálogo de productos</p>
+                <a href="/products-app">Interfaz</a>
                 <a href="/products">API</a>
                 <a href="/health/products">Health</a>
             </div>
