Corrige rutas de notifications

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -58,7 +58,7 @@
             <p>Gestión de pedidos y órdenes</p>
             <ul>
                 <li><a href="/orders" target="_blank">API Orders</a></li>
-                <li><a href="/orders-app" target="_blank">Orders App</a></li>
+                <li><a href="/orders-app/" target="_blank">Orders App</a></li>
                 <li><a href="/health/orders" target="_blank">Health Check</a></li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
             <p>Catálogo y gestión de productos</p>
             <ul>
                 <li><a href="/products" target="_blank">API Products</a></li>
-                <li><a href="/products-app" target="_blank">Products App</a></li>
+                <li><a href="/products-app/" target="_blank">Products App</a></li>
                 <li><a href="/health/products" target="_blank">Health Check</a></li>
             </ul>
         </div>
@@ -78,7 +78,7 @@
             <p>Sistema de notificaciones</p>
             <ul>
                 <li><a href="/notifications" target="_blank">API Notifications</a></li>
-                <li><a href="/notifications-app" target="_blank">Notifications App</a></li>
+                <li><a href="/notifications-app/" target="_blank">Notifications App</a></li>
                 <li><a href="/health/notifications" target="_blank">Health Check</a></li>
             </ul>
         </div>
